# pyapp

./: .gitattributes  Cargo.toml  build.rs  pixi.toml  tauri.conf.json
.cargo/: config.toml
.github/workflows/: update-lockfiles.yml
src/: app.rs  compression.rs  distribution.rs  network.rs
test_data/: explicit_win-64.txt  test_win-64_conda_spec.txt
test_data/win-64/: python_abi-3.12-5_cp312.conda  python_abi-3.8-5_cp38.conda
