[package]
name = "pyapp"
version = "0.29.0"
description = "Runtime installer for Python applications"
repository = "https://github.com/ofek/pyapp"
documentation = "https://ofek.dev/pyapp/"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bzip2 = "0.6.0"
clap = { version = "4.5.49", features = ["derive"] }
directories = "6.0.0"
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
fs4 = { version = "0.13.0", features = ["sync"] }
http = "1.3.1"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
once_cell = "1.21.3"
os_pipe = "1.2.3"
rand = "0.9.2"
# https://github.com/rust-lang/cargo/issues/9227#issuecomment-3532957795
rattler = { git = "https://github.com/snekdesign/rattler", branch = "astral-reqwest-middleware", features = ["indicatif"], default-features = false }
rattler_conda_types = { git = "https://github.com/snekdesign/rattler", branch = "astral-reqwest-middleware", default-features = false }
rattler_lock = { git = "https://github.com/snekdesign/rattler", branch = "astral-reqwest-middleware", default-features = false }
rattler_shell = { git = "https://github.com/snekdesign/rattler", branch = "astral-reqwest-middleware", default-features = false }
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.4.2", package = "astral-reqwest-middleware" }
reqwest-retry = { version = "0.8.0", package = "astral-reqwest-retry" }
tar = "0.4.43"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
url = "2.5.4"
uv-client = "0.0.9"
zip = "6.0.0"
zstd = "0.13.2"

[build-dependencies]
base64 = "0.22.1"
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
highway = "1.3.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"], default-features = false }
tar = "0.4.43"
thunk-rs = { version = "0.3.5", features = ["win7"], default-features = false }
zip = "6.0.0"

[profile.release]
opt-level = 3
panic = "abort"
strip = true
lto = true
codegen-units = 1

[package.metadata.cross.build.env]
passthrough = [
  "PYAPP_ALLOW_UPDATES",
  "PYAPP_DISTRIBUTION_EMBED",
  "PYAPP_DISTRIBUTION_FORMAT",
  "PYAPP_DISTRIBUTION_PATH",
  "PYAPP_DISTRIBUTION_PATH_PREFIX",
  "PYAPP_DISTRIBUTION_PIP_AVAILABLE",
  "PYAPP_DISTRIBUTION_PYTHON_PATH",
  "PYAPP_DISTRIBUTION_SITE_PACKAGES_PATH",
  "PYAPP_DISTRIBUTION_SOURCE",
  "PYAPP_DISTRIBUTION_VARIANT",
  "PYAPP_DISTRIBUTION_VARIANT_CPU",
  "PYAPP_DISTRIBUTION_VARIANT_GIL",
  "PYAPP_EXEC_CODE",
  "PYAPP_EXEC_MODULE",
  "PYAPP_EXEC_NOTEBOOK",
  "PYAPP_EXEC_SCRIPT",
  "PYAPP_EXEC_SPEC",
  "PYAPP_EXPOSE_ALL_COMMANDS",
  "PYAPP_EXPOSE_CACHE",
  "PYAPP_EXPOSE_METADATA",
  "PYAPP_EXPOSE_PIP",
  "PYAPP_EXPOSE_PYTHON",
  "PYAPP_EXPOSE_PYTHON_PATH",
  "PYAPP_EXPOSE_UPDATE",
  "PYAPP_FULL_ISOLATION",
  "PYAPP_IS_GUI",
  "PYAPP_METADATA_TEMPLATE",
  "PYAPP_PASS_LOCATION",
  "PYAPP_PIP_ALLOW_CONFIG",
  "PYAPP_PIP_EXTERNAL",
  "PYAPP_PIP_EXTRA_ARGS",
  "PYAPP_PIP_VERSION",
  "PYAPP_PROJECT_DEPENDENCY_FILE",
  "PYAPP_PROJECT_FEATURES",
  "PYAPP_PROJECT_NAME",
  "PYAPP_PROJECT_PATH",
  "PYAPP_PROJECT_VERSION",
  "PYAPP_PYTHON_VERSION",
  "PYAPP_SELF_COMMAND",
  "PYAPP_SKIP_INSTALL",
  "PYAPP_UPGRADE_VIRTUALENV",
  "PYAPP_UV_ENABLED",
  "PYAPP_UV_ONLY_BOOTSTRAP",
  "PYAPP_UV_SOURCE",
  "PYAPP_UV_VERSION",
]
